# aiopvxs

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/: aiopvxs.cpp  client.cpp  data.cpp  nt.cpp  pvxs_types.h  pvxs_types.hpp  server.cpp
src/tests/: conftest.py  simple_client.py  simple_discover.py  simple_monitor.py  simple_server.py  simple_value.py  test_client.py  test_value.py
