[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11 >= 3.0",
    "pvxslibs ~= 1.5.0",
    "epicscorelibs >= 7.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.windows]
repair-wheel-command = ""

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --exclude libpvxs* --exclude libCom* --exclude libevent* -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} --ignore-missing-dependencies -w {dest_dir} -v {wheel}"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project]
name = "aiopvxs"
version = "0.3.0"
urls = {"homepage" = "https://github.com/m2es3h/aiopvxs"}
authors = [{name = "Mike Smith", email = "m2es3h@gmail.com"}]
description = "Python asyncio API to the PVXS libraries"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
keywords = ['epics', 'scada', 'pvaccess']
dependencies = [
    "pybind11 >= 3.0",
    "pvxslibs ~= 1.5.0",
    "epicscorelibs >= 7.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3, <9",
    "pytest-asyncio",
]
